samples/_failures_safe/1761429717_5a9498_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0da8dc99.c: In function ‘main’:
./samples/SAFE/__tmp_0da8dc99.c:159:20: error: expected ‘;’ at end of input
  159 |         buffer_free
      |                    ^
      |                    ;
./samples/SAFE/__tmp_0da8dc99.c:159:9: error: expected declaration or statement at end of input
  159 |         buffer_free
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_0da8dc99.c:159:9: error: expected declaration or statement at end of input
